[package]
name = "smartwallet_webserver" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["Will <Williamjmcdonald@proton.me>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111"}
tokio = {version = "1.35.1", features=["full"]}
mysql = "24.0"
reqwest = "0.11.23"
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.0", features = ["mysql", "chrono"] }
dotenvy = "0.15"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
argon2 = {  version="0.5.2", features = ["password-hash"]}
rand = "0.8.5"
openai-rust = "1.5.2"
dotenv = "0.15.0"


